<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.ghulam.parkingreservationsystem.Malls.BookingActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/selected_time"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/txt_Booking_showTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingEnd="10dp"
                        android:paddingStart="10dp"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/select_hours"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/txt_Booking_Duration"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:paddingEnd="1dp"
                            android:paddingStart="10dp"
                            android:textSize="16sp"
                            android:paddingRight="1dp"
                            android:paddingLeft="10dp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_Pick_Date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/selected_date"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_Booking_showDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingEnd="10dp"
                    android:paddingStart="15dp"
                    android:textSize="16sp"
                    android:paddingRight="10dp"
                    android:paddingLeft="15dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/txt_Booking_UserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:enabled="false"
                android:inputType="none"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/txt_Booking_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:enabled="false"
                android:inputType="none"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/txt_Booking_CnicNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:enabled="false"
                android:inputType="none"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/txt_Booking_CarName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:enabled="false"
                android:inputType="none"
                android:textColor="#fff" />

            <EditText
                android:id="@+id/txt_Booking_CarLicenseNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7dp"
                android:enabled="false"
                android:inputType="none"
                android:textColor="#fff" />

            <Button
                android:id="@+id/btn_Book_Parking"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="70dp"
                android:layout_marginStart="70dp"
                android:layout_marginTop="10dp"
                android:text="@string/book_parking_now"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
